# EcommerceSystem

./: CMakeLists.txt  README.md
docs/: 简易电商系统技术报告.md
include/client/: cart.h  client_menu.h  order.h
include/common/auth/: login.h  register.h  reset.h
include/common/security/: encryption.h  validation.h
include/common/user/: user.h
include/common/utils/: control_util.h  print_util.h
include/merchant/: discount.h  merchant_main.h  product.h
src/client/: cart.c  client_main.c  client_menu.c  order.c
src/common/auth/: login.c  register.c  reset.c
src/common/security/: encryption.c  validation.c
src/common/user/: user.c
src/common/utils/: control_util.c  print_util.c
src/merchant/: discount.c  merchant_main.c  merchant_menu.c  product.c
